--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,3 +1,13 @@
+<html>
+
+    <meta http-equiv="refresh" content="0; url=https://sites.google.com/view/sungmin-cha/"></meta>
+
+</html>
+
+
+
+
+
 <div id="_yDrawer">
   <div id="_sidebar" class="sidebar">
     <div class="sidebar-bg" style="background-color:{{ color }};background-image:url({{ image }})"></div>
